--- a/templates/home.html
+++ b/templates/home.html
@@ -6,4 +6,6 @@
     <a class="btn btn-primary" role="button" href="accounts/quiz/">quize</a>
     
     <a class="btn btn-success" role="button" href="/face-scanner/scan/">Scan face</a>
+    <a class="btn btn-success" role="button" href="/face-scanner/scan_with_video/">load face with video</a>
+{#    <a class="btn btn-success" role="button" href="/face-scanner/scan_with_photo/">load face with photo</a>#}
 {% endblock %}
