--- a/templates/home.html
+++ b/templates/home.html
@@ -3,9 +3,11 @@
     <h2>Welcome</h2>
     
     
-    <a class="btn btn-primary" role="button" href="accounts/quiz/">quize</a>
+{#    <a class="btn btn-primary" role="button" href="accounts/quiz/">quize</a>#}
     
-    <a class="btn btn-success" role="button" href="/face-scanner/scan/">Scan face</a>
-    <a class="btn btn-success" role="button" href="/face-scanner/scan_with_video/">load face with video</a>
+{#    <a class="btn btn-success" role="button" href="/face-scanner/scan/">Scan face</a>#}
+    <a class="btn btn-success" role="button" href="/face-scanner/face-mesh/">Scan Face Page</a>
+{#    <a class="btn btn-success" role="button" href="/face-scanner/scan_with_video/">load face with video</a>#}
+    <a class="btn btn-success" role="button" href="/face-scanner/face-mesh_load/">load face with Page</a>
 {#    <a class="btn btn-success" role="button" href="/face-scanner/scan_with_photo/">load face with photo</a>#}
 {% endblock %}
